# NovelAgent

./: .gitignore  CLAUDE.md  README.md  environment.yaml  findings.md  progress.md  pyproject.toml  task_plan.md
.claude/: settings.local.json
docs/: 2026-04-30-novelagent-design.md
docs/20260430174600-advice/: 20260430174600-chatgpt-advice.md  20260430174600-deepseek-advice.md  20260430174600-doubao-advice.md  20260430174600-gemini-advice.md  20260430174600-mirothinker-advice.md
requirements/: core.txt  dev.txt  optional.txt
src/novelagent/: __init__.py
src/novelagent/agent/: __init__.py
src/novelagent/core/: __init__.py  event_bus.py  events.py
src/novelagent/gui/: __init__.py
src/novelagent/gui/api/: __init__.py
src/novelagent/kg/: __init__.py  knowledge_graph.py
src/novelagent/llm/: __init__.py  config.py  provider.py
src/novelagent/plot/: __init__.py
src/novelagent/storage/: __init__.py  mempalace.py
tests/: __init__.py  conftest.py
tests/test_core/: test_event_bus.py  test_events.py
tests/test_kg/: test_knowledge_graph.py
tests/test_llm/: __init__.py  test_config.py  test_provider.py
tests/test_storage/: test_mempalace.py
