[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy._Backend"

[project]
name = "novelagent"
version = "0.1.0"
description = "An event-driven AI Agent framework for novel generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["novel", "writing", "ai-agent", "knowledge-graph"]

[project.urls]
Homepage = "https://github.com/novelagent/novelagent"

[tool.setuptools.packages.find]
where = ["src"]
include = ["novelagent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/novelagent --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
